// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioField /> renders properly 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="sc-bcXHqe gKnvGb"
    data-testid="test-form"
    id="test-form"
  >
    <fieldset
      aria-invalid="false"
      class="sc-bcXHqe sc-gswNZR bCCsKX ilnAE"
      data-testid="radio-test"
      display="flex"
      id="my-radio-field"
      width="input"
    >
      <label
        class="sc-bcXHqe sc-hLBbgP sc-jSUZER sc-kDvujY buRcGv jvXitA"
        color="text.primary"
        font-weight="600"
      >
        This is my radio field
      </label>
      <div
        class="sc-bcXHqe sc-dkrFOg bKAcQn"
        display="grid"
      >
        <div
          class="sc-bcXHqe sc-gswNZR kXvSYP iEgkhg"
          display="flex"
        >
          <input
            class="sc-ipEyDJ fiBdOJ"
            data-testid="radio-my-radio-field-a"
            id="my-radio-field-a"
            name="myRadioField"
            type="radio"
            value="a"
          />
          <label
            class="sc-bcXHqe sc-hLBbgP sc-eDvSVe buGHCA cqiIFy"
            color="text.primary"
            font-size="font-size-100"
            font-style="none"
            font-weight="400"
            for="my-radio-field-a"
          >
            Value A
          </label>
        </div>
        <div
          class="sc-bcXHqe sc-gswNZR kXvSYP iEgkhg"
          display="flex"
        >
          <input
            class="sc-ipEyDJ fiBdOJ"
            data-testid="radio-my-radio-field-b"
            id="my-radio-field-b"
            name="myRadioField"
            type="radio"
            value="b"
          />
          <label
            class="sc-bcXHqe sc-hLBbgP sc-eDvSVe buGHCA cqiIFy"
            color="text.primary"
            font-size="font-size-100"
            font-style="none"
            font-weight="400"
            for="my-radio-field-b"
          >
            Value B
          </label>
        </div>
      </div>
    </fieldset>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`<RadioField /> with error renders properly 1`] = `
<DocumentFragment>
  <form
    autocomplete="off"
    class="sc-bcXHqe gKnvGb"
    data-testid="test-form"
    id="test-form"
  >
    <fieldset
      aria-describedby="error-my-radio-field"
      aria-errormessage="error-my-radio-field"
      aria-invalid="true"
      class="sc-bcXHqe sc-gswNZR bCCsKX ilnAE"
      data-testid="radio-test"
      display="flex"
      id="my-radio-field"
      width="input"
    >
      <label
        class="sc-bcXHqe sc-hLBbgP sc-jSUZER sc-kDvujY buRcGv jvXitA"
        color="text.primary"
        font-weight="600"
      >
        This is my radio field
      </label>
      <div
        class="sc-bcXHqe sc-dkrFOg bKAcQn"
        display="grid"
      >
        <div
          class="sc-bcXHqe sc-gswNZR kXvSYP iEgkhg"
          display="flex"
        >
          <input
            class="sc-ipEyDJ fiBdOJ"
            data-testid="radio-my-radio-field-a"
            id="my-radio-field-a"
            name="myRadioField"
            type="radio"
            value="a"
          />
          <label
            class="sc-bcXHqe sc-hLBbgP sc-eDvSVe buGHCA cqiIFy"
            color="text.primary"
            font-size="font-size-100"
            font-style="none"
            font-weight="400"
            for="my-radio-field-a"
          >
            Value A
          </label>
        </div>
        <div
          class="sc-bcXHqe sc-gswNZR kXvSYP iEgkhg"
          display="flex"
        >
          <input
            class="sc-ipEyDJ fiBdOJ"
            data-testid="radio-my-radio-field-b"
            id="my-radio-field-b"
            name="myRadioField"
            type="radio"
            value="b"
          />
          <label
            class="sc-bcXHqe sc-hLBbgP sc-eDvSVe buGHCA cqiIFy"
            color="text.primary"
            font-size="font-size-100"
            font-style="none"
            font-weight="400"
            for="my-radio-field-b"
          >
            Value B
          </label>
        </div>
      </div>
      <div
        class="sc-bcXHqe kmLsld"
        data-testid="error-my-radio-field"
        id="error-my-radio-field"
        role="alert"
      >
        <div
          class="sc-bcXHqe sc-hLBbgP sc-eDvSVe eRuTCG fHZCEm"
          color="text.critical"
          font-size="font-size-100"
          font-style="none"
          font-weight="400"
        >
          <p
            class="sc-bcXHqe sc-hLBbgP fRQuMW dDZkPR"
            color="inherit"
          >
            errors.required
          </p>
        </div>
      </div>
    </fieldset>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
